--- a/about.html
+++ b/about.html
@@ -13,10 +13,30 @@
 
 <body>
     <div class="container about-page">
+      <section class="navbar">
+          <img src="/img/lambda-black.png" alt="lambda logo">
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="">Products</a>
+          <a href="">Blog</a>
+          <a href="">Contact</a>
+      </section>
+      <section class= "top-content">
+          <div class="jumbo-image">
+              <img src="/img/jumbo-about.png" alt="jumbo skyline image">
+          </div>
+          <div class="top-content-about">
+              <h2>About</h2>
+              <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+          </div>
+     </section>
+      <section class= "middle-content-about">
+        
+      </section>
+      <section class = "bottom-content-about"></section>
      
-    About
+   
 
-    Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
 
 
     <img src="img/about-plan.png" alt="strategy">
