began contact page, added links to it in navbar on index and about page

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <body>
     <div class="container">
-        <section class="navbar">
+        <nav>
             <img src="/img/lambda-black.png" alt="lambda logo">
             <a href="">Home</a>
             <a href="about.html">About</a>
             <a href="">Products</a>
             <a href="">Blog</a>
-            <a href="">Contact</a>
-        </section>
+            <a href="contact.html">Contact</a>
+        </nav>
         <section class="top-content">
             <div class="jumbo-image">
                     <img src="/img/jumbo.jpg" alt="jumbo image">
