fixed file path names on images

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,12 @@
             <a href="contact.html">Contact</a>
         </nav>
     
-
+        <section class = "top-content-contact">
+            <div class="jumbo-contact">
+                <h1>GET IN TOUCH WITH LAMBDA</h1>
+            </div>
+        </section>
+        <section class = "middle-content-contact"></section>
                 
         <footer>
             <nav>
