--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container about-page">
       <nav>
-          <img src="/img/lambda-black.png" alt="lambda logo">
+          <img src="img/lambda-black.png" alt="lambda logo">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="">Products</a>
@@ -23,7 +23,7 @@
       </nav>
       <section class= "top-content">
           <div class="jumbo-image">
-              <img src="/img/jumbo-about.png" alt="jumbo skyline image">
+              <img src="img/jumbo-about.png" alt="jumbo skyline image">
           </div>
           <div class="top-content-about">
               <h2>About</h2>
