--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <nav>
-            <img src="/img/lambda-black.png" alt="lambda logo">
+            <img src="img/lambda-black.png" alt="lambda logo">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="">Products</a>
