--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <nav>
-            <img src="/img/lambda-black.png" alt="lambda logo">
+            <img src="img/lambda-black.png" alt="lambda logo">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="">Products</a>
@@ -23,7 +23,7 @@
         </nav>
         <section class="top-content">
             <div class="jumbo-image">
-                    <img src="/img/jumbo.jpg" alt="jumbo image">
+                    <img src="img/jumbo.jpg" alt="jumbo image">
             </div>
             <div class="text-container">
                 <h2>The Future</h2>
