completed contact form, added animation on submit button, added animation to nav links

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,23 @@
             <div class="jumbo-contact">
                 <h1>GET IN TOUCH WITH LAMBDA</h1>
             </div>
+            <div class="contact-arrow">
+                <img src="https://cdn4.iconfinder.com/data/icons/arrows-set-1-1/100/arrow1-512.png" alt="">
+            </div>
+            <form action="" class = "contact-form">
+                First Name: <br>
+                <input type="text" name="firstname"><br>
+                Last Name: <br>
+                <input type="text" name="lastname"><br>
+                Email Address: <br>
+                <input type="email" name="email"><br>
+                Leave a Message: <br>
+                <textarea name="message" rows="10" cols="30"></textarea>
+                <input type="submit" value="Submit" id="submit">
+
+
+            </form>
         </section>
-        <section class = "middle-content-contact"></section>
                 
         <footer>
             <nav>
